2007-07-03  Antti Koivisto  <antti@apple.com>

        Reviewed by Maciej.
        
        REGRESSION: misplaced selection ring remains after link is no longer focused.
        <rdar://problem/5205580>
        
        Fix placement of selection ring when part of the ring is in a different layer.

        * rendering/RenderFlow.cpp:
        (WebCore::RenderFlow::addFocusRingRects): Get coordinates right when moving to a different layer.
        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::setStyle): 
        Don't reset state variables when not necessary.  When repaint() was called at the end of setSyle() it would
        get repaint rects wrong in some cases.

2007-07-03  Antti Koivisto  <antti@apple.com>

        Reviewed by Maciej.

        Blind fix for CrashTracer: [USER] 25 crashes in Safari at com.apple.WebCore: WebCore::Frame::document const + 6
        <rdar://problem/5263939>
        
        No one has managed to reproduce this but it looks like null check is needed here. There are plausible ways
        m_frame could be null for a live FrameView object.

        * page/FrameView.cpp:
        (WebCore::FrameView::needsLayout):

2007-07-02  Oliver Hunt  <oliver@apple.com>

        Reviewed by Darin.

        Fix for <rdar://problem/5098378> single-pixel image optimization needs to be rewritten to not depend on floating point bitmap
        Tested by fast/replaced/image-solid-color-with-alpha.html

        Switch from float to byte based bitmap when pulling the color from 1x1 pixel images so
        that we can use the single pixel image optimisation in WebKit/win.

        * platform/graphics/cg/ImageCG.cpp:
        (WebCore::BitmapImage::checkForSolidColor):

2007-07-02  Adam Roben  <aroben@apple.com>

        Fix Bug 14498: RenderContainer::positionForCoordinates contains an order of operations error
        http://bugs.webkit.org/show_bug.cgi?id=14498

        There were two bugs:
        1) xPos/yPos were flipped